add finish, bug move incorect, pawn eat
