# back/src/dto/chess.dto.ts
@@ -1,6 +1,6 @@
 export interface ChessMoveInputDTO {
   from: string; // Position de départ (ex: "e2")
-  to: string;   // Position d'arrivée (ex: "e4")
+  to: string; // Position d'arrivée (ex: "e4")
   piece: string; // Type de pièce (ex: "PAWN", "KNIGHT", etc.)
 }
 
@@ -8,14 +8,16 @@ export interface ChessMoveOutputDTO {
   success: boolean;
   message: string;
   board?: string[][]; // Représentation du plateau après le mouvement
-  isCheck?: boolean;  // Si le roi est en échec
+  isCheck?: boolean; // Si le roi est en échec
   isCheckmate?: boolean; // Si c'est un échec et mat
+  isFinished?: boolean;
+  winnerColor?: "WHITE" | "BLACK";
 }
 
 export interface ChessGameStateDTO {
   gameId: number;
   board: string[][];
-  currentTurn: 'WHITE' | 'BLACK';
+  currentTurn: "WHITE" | "BLACK";
   isCheck: boolean;
   isCheckmate: boolean;
   moves: string[]; // Historique des coups
